tests/paczka1/fuzzy1/55190343.err
Error in line 27: swzux A2l0 424,5
Error in line 39: Cr3RtcCx A142 42,31
Error in line 37: hqONBtV1Q A702 63,2
